--- a/Notebooks/demographic-data.ipynb
+++ b/Notebooks/demographic-data.ipynb
@@ -7,12 +7,12 @@
     "<center><font size=\"5\">Extracción de Datos del Censo de los Estados Unidos (API)</font></center>\n",
     "\n",
     "Introducción:  \n",
-    "Este script de Python extrae datos demográficos de la API del Censo de los Estados Unidos para los estados de Florida, Pensilvania y Tennessee. La información recopilada incluye la población total por año."
+    "Este script de Python extrae datos demográficos de la API del Censo de los Estados Unidos para los estados de Florida, Pensilvania y Tennessee. La información recopilada incluye la población total por año.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "200"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "'[[\"NAME\",\"B01001_001E\",\"us\"],\\n[\"United States\",\"326569308\",\"1\"]]'"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "[['NAME', 'B01001_001E', 'us'], ['United States', '326569308', '1']]"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "0  United States   326569308  1"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "0  United States        326569308  1"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "200"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "4       New York         19514849    36"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "4       Nevada           2798636    32  2015"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "7   Florida          21216924    12  2020"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "0   Pennsylvania          12794885    42  2020"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "51  Tennessee           6772268    47  2020"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
        "38  Pennsylvania          12791530    42  2019"
       ]
      },
-     "execution_count": 384,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
